// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Footer /> should match the default snapshot 1`] = `
<footer
  className="sc-htpNat bkysdI"
  role="contentinfo"
>
  <div
    className="sc-bxivhb dOBdqA"
  >
    <div
      className="sc-EHOje bGMlPn"
    >
      <div
        className="sc-bZQynM cvzEjQ"
      >
        <svg
          className="sc-jTzLTM ilpblk"
          focusable="false"
          height="17"
          role="presentation"
          viewBox="0 0 483.2 195.7"
          width="41"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
            fill="currentColor"
          />
        </svg>
        <span
          className="sc-fjdhpX kOVkRO"
        >
          All content is available under the
           
          <span
            className="sc-bwzfXH gXOrjU"
          >
            <a
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
          </span>
          , except where otherwise stated
        </span>
      </div>
      <div
        className="sc-bZQynM yGSHK"
      >
        <a
          className="sc-jzJRlG iOfAMM"
          href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
        >
          © Crown copyright
        </a>
      </div>
    </div>
  </div>
</footer>
`;

exports[`<Footer /> should match the with children snapshot 1`] = `
<footer
  className="sc-htpNat bkysdI"
  role="contentinfo"
>
  <div
    className="sc-bxivhb dOBdqA"
  >
    <div
      className="sc-EHOje bGMlPn"
    >
      <div
        className="sc-bZQynM cvzEjQ"
      >
        <div
          className="sc-gzVnrw gxLAvJ"
        >
          Built by the 
          <a
            href="/gds"
          >
            Government Digital Service
          </a>
        </div>
        <svg
          className="sc-jTzLTM ilpblk"
          focusable="false"
          height="17"
          role="presentation"
          viewBox="0 0 483.2 195.7"
          width="41"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
            fill="currentColor"
          />
        </svg>
        <span
          className="sc-fjdhpX kOVkRO"
        >
          All content is available under the
           
          <span
            className="sc-bwzfXH gXOrjU"
          >
            <a
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
          </span>
          , except where otherwise stated
        </span>
      </div>
      <div
        className="sc-bZQynM yGSHK"
      >
        <a
          className="sc-jzJRlG iOfAMM"
          href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
        >
          © Crown copyright
        </a>
      </div>
    </div>
  </div>
</footer>
`;

exports[`<Footer /> should match the with meta snapshot 1`] = `
<footer
  className="sc-htpNat bkysdI"
  role="contentinfo"
>
  <div
    className="sc-bxivhb dOBdqA"
  >
    <div
      className="sc-EHOje bGMlPn"
    >
      <div
        className="sc-bZQynM cvzEjQ"
      >
        <h2
          className="sc-htoDjs daNMMx sc-bdVaJa eLwxMn"
        >
          Support links
        </h2>
        <div
          className="sc-dnqmqq dhKqXx"
        >
          <li>
            <span
              className="sc-bwzfXH gXOrjU"
            >
              <a
                href="/normal-link"
              >
                Normal Link
              </a>
            </span>
          </li>
          <li>
            <span
              className="sc-bwzfXH gXOrjU"
            >
              <a
                href="/router-link"
                onClick={[Function]}
              >
                Router Link
              </a>
            </span>
          </li>
          <li>
            <span
              className="sc-bwzfXH gXOrjU"
            >
              <a
                onClick={[MockFunction]}
              >
                onClick Link
              </a>
            </span>
          </li>
        </div>
        <svg
          className="sc-jTzLTM ilpblk"
          focusable="false"
          height="17"
          role="presentation"
          viewBox="0 0 483.2 195.7"
          width="41"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
            fill="currentColor"
          />
        </svg>
        <span
          className="sc-fjdhpX kOVkRO"
        >
          All content is available under the
           
          <span
            className="sc-bwzfXH gXOrjU"
          >
            <a
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
          </span>
          , except where otherwise stated
        </span>
      </div>
      <div
        className="sc-bZQynM yGSHK"
      >
        <a
          className="sc-jzJRlG iOfAMM"
          href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
        >
          © Crown copyright
        </a>
      </div>
    </div>
  </div>
</footer>
`;

exports[`<Footer /> should match the with navigation snapshot 1`] = `
<footer
  className="sc-htpNat bkysdI"
  role="contentinfo"
>
  <div
    className="sc-bxivhb dOBdqA"
  >
    <div
      className="sc-gZMcBi fnWdCz"
    >
      <div
        className="sc-gqjmRU bIBQJo"
      >
        <h2
          className="sc-iwsKbI gMKkcH sc-bdVaJa jAqeHE"
        >
          Services and information
        </h2>
        <ul
          className="sc-VigVT erjKcu"
        >
          <li>
            <span
              className="sc-bwzfXH gXOrjU"
            >
              <a
                href="/benefits"
              >
                Benefits
              </a>
            </span>
          </li>
          <li>
            <span
              className="sc-bwzfXH gXOrjU"
            >
              <a
                href="/births-deaths"
              >
                Births, deaths, marriages and care
              </a>
            </span>
          </li>
          <li>
            <span
              className="sc-bwzfXH gXOrjU"
            >
              <a
                href="/business-self-employed"
              >
                Business and self-employed
              </a>
            </span>
          </li>
          <li>
            <span
              className="sc-bwzfXH gXOrjU"
            >
              <a
                href="/childcare-parenting"
              >
                Childcare and parenting
              </a>
            </span>
          </li>
          <li>
            <span
              className="sc-bwzfXH gXOrjU"
            >
              <a
                href="/citizenship"
              >
                Citizenship and living in the UK
              </a>
            </span>
          </li>
          <li>
            <span
              className="sc-bwzfXH gXOrjU"
            >
              <a
                href="/crime-justice"
              >
                Crime, justice and the law
              </a>
            </span>
          </li>
          <li>
            <span
              className="sc-bwzfXH gXOrjU"
            >
              <a
                href="/disabled-people"
              >
                Disabled people
              </a>
            </span>
          </li>
          <li>
            <span
              className="sc-bwzfXH gXOrjU"
            >
              <a
                href="/driving-transport"
              >
                Driving and transport
              </a>
            </span>
          </li>
          <li>
            <span
              className="sc-bwzfXH gXOrjU"
            >
              <a
                href="/education-learning"
              >
                Education and learning
              </a>
            </span>
          </li>
          <li>
            <span
              className="sc-bwzfXH gXOrjU"
            >
              <a
                href="/employing-people"
              >
                Employing people
              </a>
            </span>
          </li>
          <li>
            <span
              className="sc-bwzfXH gXOrjU"
            >
              <a
                href="/environment-countryside"
              >
                Environment and countryside
              </a>
            </span>
          </li>
          <li>
            <span
              className="sc-bwzfXH gXOrjU"
            >
              <a
                href="/housing-local"
              >
                Housing and local services
              </a>
            </span>
          </li>
          <li>
            <span
              className="sc-bwzfXH gXOrjU"
            >
              <a
                href="/money-tax"
              >
                Money and tax
              </a>
            </span>
          </li>
          <li>
            <span
              className="sc-bwzfXH gXOrjU"
            >
              <a
                href="/passports-abroad"
              >
                Passports, travel and living abroad
              </a>
            </span>
          </li>
          <li>
            <span
              className="sc-bwzfXH gXOrjU"
            >
              <a
                href="/visas-immigration"
              >
                Visas and immigration
              </a>
            </span>
          </li>
          <li>
            <span
              className="sc-bwzfXH gXOrjU"
            >
              <a
                href="/working-pensions"
              >
                Working, jobs and pensions
              </a>
            </span>
          </li>
        </ul>
      </div>
      <div
        className="sc-gqjmRU bIBQJo"
      >
        <h2
          className="sc-iwsKbI gMKkcH sc-bdVaJa jAqeHE"
        >
          Departments and policy
        </h2>
        <ul
          className="sc-VigVT bNGtuc"
        >
          <li>
            <span
              className="sc-bwzfXH gXOrjU"
            >
              <a
                href="/how-gov-works"
              >
                How government works
              </a>
            </span>
          </li>
          <li>
            <span
              className="sc-bwzfXH gXOrjU"
            >
              <a
                href="/departments"
              >
                Departments
              </a>
            </span>
          </li>
          <li>
            <span
              className="sc-bwzfXH gXOrjU"
            >
              <a
                href="/worldwide"
              >
                Worldwide
              </a>
            </span>
          </li>
          <li>
            <span
              className="sc-bwzfXH gXOrjU"
            >
              <a
                href="/policies"
              >
                Policies
              </a>
            </span>
          </li>
          <li>
            <span
              className="sc-bwzfXH gXOrjU"
            >
              <a
                href="/publications"
              >
                Publications
              </a>
            </span>
          </li>
          <li>
            <span
              className="sc-bwzfXH gXOrjU"
            >
              <a
                href="/announcements"
              >
                Announcements
              </a>
            </span>
          </li>
        </ul>
      </div>
    </div>
    <hr
      className="sc-ifAKCX jlKcyU"
    />
    <div
      className="sc-EHOje bGMlPn"
    >
      <div
        className="sc-bZQynM cvzEjQ"
      >
        <svg
          className="sc-jTzLTM ilpblk"
          focusable="false"
          height="17"
          role="presentation"
          viewBox="0 0 483.2 195.7"
          width="41"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
            fill="currentColor"
          />
        </svg>
        <span
          className="sc-fjdhpX kOVkRO"
        >
          All content is available under the
           
          <span
            className="sc-bwzfXH gXOrjU"
          >
            <a
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              rel="license"
            >
              Open Government Licence v3.0
            </a>
          </span>
          , except where otherwise stated
        </span>
      </div>
      <div
        className="sc-bZQynM yGSHK"
      >
        <a
          className="sc-jzJRlG iOfAMM"
          href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
        >
          © Crown copyright
        </a>
      </div>
    </div>
  </div>
</footer>
`;
